# cmake-sdl2-example

./: .gitmodules  CMakeLists.txt  README.md
src/: Main.cpp
